DEV:  integrate root_to_dev@2565
[git-p4: depot-paths = "//open/dev/": change = 2566]